--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,19 +1,20 @@
 Package: FastRCS
 Type: Package
 Title: R package to compute the FastRCS outlyingness index.
-Version: 0.0.3
+Version: 0.0.4
 Date: 2013-01-13
 Depends: matrixStats
 Suggests: mvtnorm
 LinkingTo: Rcpp, RcppEigen
+SystemRequirements: C++11
 Description: The FastRCS outlyingness index is an algorithm for finding outliers for the linear regression model. 
 License: GPL (>= 2)
 LazyLoad: yes
 Authors@R: person("Kaveh", "Vakili", email =
-        "kaveh.vakili@wis.kuleuven.be", role = c("aut", "cre"))
+        "vakili.kaveh.email@gmail.com", role = c("aut", "cre"))
 Author: Kaveh Vakili [aut, cre]
-Maintainer: Kaveh Vakili <kaveh.vakili@wis.kuleuven.be>
-Packaged: 2014-04-24 09:42:22 UTC; kaveh
+Maintainer: Kaveh Vakili <vakili.kaveh.email@gmail.com>
+Packaged: 2014-09-08 09:47:36 UTC; kaveh
 NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2014-04-24 14:49:02
+Date/Publication: 2014-09-08 13:21:00
