--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,19 +1,19 @@
 Package: FastRCS
 Type: Package
-Title: R package to compute the FastRCS Algorithm
-Version: 0.0.1
+Title: R package to compute the FastRCS outlyingness index.
+Version: 0.0.2
 Date: 2013-01-13
 Depends: matrixStats
 Suggests: mvtnorm
 LinkingTo: Rcpp, RcppEigen
-Description: R implementation of the FastRCS algorithm for computing the FastRCS outlyingness index.
+Description: The FastRCS outlyingness index is an algorithm for finding outliers for the linear regression model. 
 License: GPL (>= 2)
 LazyLoad: yes
 Authors@R: person("Kaveh", "Vakili", email =
         "kaveh.vakili@wis.kuleuven.be", role = c("aut", "cre"))
 Author: Kaveh Vakili [aut, cre]
 Maintainer: Kaveh Vakili <kaveh.vakili@wis.kuleuven.be>
-Packaged: 2013-07-17 17:00:49 UTC; kaveh
+Packaged: 2014-02-19 16:59:46 UTC; kaveh
 NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2013-07-17 19:56:17
+Date/Publication: 2014-02-19 18:28:01
