--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: FastRCS
 Type: Package
-Title: FastRCS Robust Fit of Multivariable Linear Regression Model
-Version: 0.0.6
-Date: 2013-01-13
+Title: Fits the FastRCS Robust Multivariable Linear Regression Model
+Version: 0.0.7
+Date: 2014-01-13
 Depends: R (>= 3.1.1), matrixStats
 Suggests: mvtnorm
 LinkingTo: Rcpp, RcppEigen
@@ -14,7 +14,7 @@ Authors@R: person("Kaveh", "Vakili", email =
         "vakili.kaveh.email@gmail.com", role = c("aut", "cre"))
 Author: Kaveh Vakili [aut, cre]
 Maintainer: Kaveh Vakili <vakili.kaveh.email@gmail.com>
-Packaged: 2015-01-05 23:07:17 UTC; kaveh
+Packaged: 2015-10-18 12:01:52 UTC; kaveh
 NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2015-01-09 06:06:29
+Date/Publication: 2015-10-18 17:19:56
